<resources>
    <string name="app_name">FoodConnect</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">Forgot Password ? </string>
    <string name="names_hint">Names</string>
    <string name="names">Names</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">xyz@email.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">+2547xxxxxxxx</string>
    <string name="new_password">New Password</string>
    <string name="password_hint">* * * * * *</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="role">Role</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="transporter">Transporter</string>
    <string name="certified_authority">Certified Authority</string>
    <string name="seller">Seller</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="admin">Admin</string>
    <string name="next">next</string>
    <string name="my_products">My Products</string>
    <string name="orders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_category">Product Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price Per Unit</string>
    <string name="product_unit">Product Unit</string>
    <string name="products">Products</string>
    <string name="hy">-</string>
    <string name="click_to_pick_product_category">Click to pick product category</string>
    <string name="solid">Solid</string>
    <string name="liquid">Liquid</string>
    <string name="gas">Gas</string>
    <string name="email_verification">Email Verification</string>
    <string name="verification">Verification</string>
    <string name="choose_a_method_for_verification">Choose a method for verification</string>
    <string name="or">OR</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="logout">Logout</string>
    <string name="code">Code</string>
    <string name="to_be_filled">-</string>
    <string name="dismiss">Dismiss</string>
    <string name="resend_verification">Resend Email</string>
    <string name="verify_to_continue">Verify your Account to continue</string>
    <string name="check_status">Check Verification Status</string>
    <string name="getting_your_data">Getting your data</string>

    <string name="media_channel_description">This is to notify you about relevant media in app</string>
    <string name="user_channel_description">This is to notify you about relevant activity related to you</string>
    <string name="synch_notification_description">To show you when synchronization is occurring</string>

    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="circle">Circle</string>
    <string name="users">Users</string>
    <string name="items_remaining">items remaining</string>
    <string name="search">Search</string>
    <string name="total">Total</string>
    <string name="_0">0</string>
    <string name="removeitem">removeItem</string>
    <string name="addItem">addItem</string>
    <string name="checkout">Checkout</string>
    <string name="order">Order</string>
    <string name="title_activity_buy_orders">BuyOrders</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jobs">Jobs</string>
    <string name="location">Location</string>
    <string name="select_delivery_location">Select delivery location</string>
    <string name="choose_location_of_supply">Choose location of supply</string>
    <string name="buyer_name">Buyer name</string>
    <string name="accept">Accept</string>
    <string name="more">More</string>
    <string name="items">Items</string>
    <string name="proceed">Proceed</string>
    <string name="action">Action</string>
    <string name="go_to_beneficiary">Go to Beneficiary</string>
    <string name="arrived">Arrived</string>
    <string name="complete">Complete</string>
    <string name="donor">Donor</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="tonne">Tonne</string>
    <string name="kg">Kilogram</string>
    <string name="g">Gram</string>
    <string name="add_items">Add donation items</string>
    <string name="add_donation">Add Donation</string>
    <string name="donation_job">Donation Jobs</string>
    <string name="start_journey">Start Journey</string>
    <string name="donations">Donations</string>
    <string name="stats">Statistics</string>
    <string name="no_data">No data</string>
    <string name="no_donor_data">No donor data</string>
    <string name="no_seller_data">No seller data</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="donor_stats">Donor Statistics</string>
    <string name="ps">Purchase Statistics</string>
    <string name="title_activity_transporter_donation_stats">TransporterDonationStats</string>
    <string name="purchase_stats">Purchase Stats</string>
    <string name="donation_stats">Donation Stats</string>


</resources>