<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    app:cardElevation="12dp"

    android:background="@drawable/login_bg_button_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:minWidth="350dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/verificationTb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:titleTextColor="@color/white"
            android:layout_gravity="top"
            app:title="@string/verification"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/choose_a_method_for_verification"/>


        <Button
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_bg_button_white"
            android:layout_margin="20dp"
            android:text="@string/email_address"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/or"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:layout_marginEnd="20dp"
                android:indeterminateTint="@color/purple_200"
                android:progressTint="@color/purple_200"
                android:progress="10"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login_bg_button_white"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/mobile_number"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/code"
            android:textColorHint="@color/black"/>


        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_bg_button_white"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@color/white"
            android:layout_margin="60dp"
            android:text="@string/logout"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>