<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/names"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person"
                android:id="@+id/namesField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/names_hint"
                android:textColor="@color/black"
                android:importantForAutofill="auto"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person"
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:importantForAutofill="auto"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:drawablePadding="10dp"

                android:drawableStart="@android:drawable/sym_action_email"
                android:id="@+id/emailAddressField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/email_address_hint"
                android:textColor="@color/black"
                android:importantForAutofill="auto"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/darker_gray"
                android:drawableStart="@android:drawable/stat_sys_phone_call"
                android:id="@+id/phoneNumberField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/phone_hint"
                android:textColor="@color/black"
                android:importantForAutofill="auto"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="@android:color/darker_gray"
                tools:targetApi="m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/darker_gray"
                android:drawableStart="@drawable/ic_lock"
                android:id="@+id/passwordF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:importantForAutofill="auto"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:targetApi="m" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/darker_gray"
                android:drawableStart="@drawable/ic_lock"
                android:id="@+id/cPasswordF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_field_white"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:importantForAutofill="auto"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:targetApi="m" />

            <Button

                android:id="@+id/registerUserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:background="@drawable/login_bg_button"
                android:backgroundTint="@color/black"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    <!--</ScrollView>-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>