<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:padding="5dp"
    android:background="@drawable/edit_text_field_white"
    android:elevation="12dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/productImage"
            android:layout_width="100dp"
            android:scaleType="fitXY"
            android:layout_height="100dp"
            app:riv_corner_radius="15dp"
            android:layout_gravity="center"
            android:src="@color/semiGrey"/>

        <LinearLayout
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_weight="1"
                android:minHeight="50dp"
                android:id="@+id/productTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:text="@string/product_name"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/description"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/seller"
                android:fontFamily="sans-serif"
                android:layout_width="match_parent"
                android:minHeight="50dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textStyle="bold"
                android:text="@string/seller"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <TextView
                android:id="@+id/productPrice"
                android:fontFamily="sans-serif"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/product_price"/>


            <TextView
                android:id="@+id/total"
                android:fontFamily="serif"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/total"/>

        </LinearLayout>

        <LinearLayout

            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1.3">

            <ImageButton
                android:id="@+id/removeItem"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_field_white"
                android:backgroundTint="@android:color/holo_orange_light"
                android:contentDescription="@string/removeitem"
                android:minWidth="48dp"
                android:src="@drawable/minus" />


            <TextView
                android:id="@+id/items"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/_0"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />


            <ImageButton
                android:id="@+id/addItem"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_field_white"
                android:backgroundTint="@android:color/holo_orange_light"
                android:contentDescription="@string/addItem"
                android:minWidth="48dp"
                android:src="@drawable/add" />

        </LinearLayout>



    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteItem"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_field_white"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/removeitem"
        android:minWidth="48dp"
        android:src="@drawable/ic_delete" />

</LinearLayout>