<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.VerifyAccount">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <androidx.appcompat.widget.Toolbar
           android:id="@+id/verifyDialog"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center|top"
           android:gravity="center"
           android:textSize="20sp"
           app:titleTextColor="@color/white"
           android:background="@color/black"
           app:navigationIcon="@android:drawable/sym_action_email"
           app:title="@string/verify_to_continue"/>

       <LinearLayout
           android:padding="20dp"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">



           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:gravity="center"
               android:textStyle="normal"
               android:textColor="@color/black"
               android:fontFamily="serif"
               android:textSize="16sp"
               android:padding="5dp"
               android:text="@string/getting_your_data"
               android:id="@+id/newInfoTv"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@android:color/darker_gray"
               android:layout_marginStart="40dp"
               android:layout_marginEnd="40dp"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="15dp"
               android:background="@drawable/login_bg_button"
               android:backgroundTint="@android:color/darker_gray"
               android:textColor="@color/white"
               android:textSize="20sp"
               android:textStyle="bold|italic"
               android:text="@string/resend_verification"
               android:id="@+id/resendButton"/>


           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="15dp"
               android:background="@drawable/login_bg_button"
               android:textColor="@color/white"
               android:textSize="20sp"
               android:textStyle="bold|italic"
               android:text="@string/check_status"
               android:id="@+id/checkStatus"/>

           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_margin="15dp"
               android:background="@drawable/login_bg_button"
               android:backgroundTint="@android:color/holo_red_dark"
               android:textColor="@color/white"
               android:textSize="20sp"
               android:textStyle="bold|italic"
               android:text="@string/logout"
               android:id="@+id/logoutButton"/>
       </LinearLayout>

   </LinearLayout>

    <ProgressBar
        android:id="@+id/verifyProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="150dp"
        android:indeterminateTint="@color/black"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>